<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PagamentoActivity">

    <TextView
        android:id="@+id/pagamento_texto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/digite_as_informa_es_do_cart_o_de_cr_dito_que_voc_deseja_usar_para_o_pagamento"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/pagamento_valo_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_da_compra"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/pagamento_texto"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/pagamento_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="R$399,99"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_dark"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/pagamento_valo_pacote"
        app:layout_constraintTop_toBottomOf="@id/pagamento_valo_pacote"
        />

    <EditText
        android:id="@+id/pagamento_numero_cartao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/n_mero_do_cart_o_de_cr_dito"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintTop_toBottomOf="@id/pagamento_preco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="número cartão de credito" />
    <EditText
        android:id="@+id/pagamento_mes"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/mm"
        android:inputType="number"
        android:textAlignment="center"
        android:maxLength="2"
        app:layout_constraintTop_toTopOf="@id/pagamento_CVC"
        app:layout_constraintStart_toStartOf="@id/pagamento_numero_cartao"
        android:layout_marginTop="8dp"
        android:autofillHints="Mês de validade do Cartão" />

    <EditText
        android:id="@+id/pagamento_ano"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/aa"
        android:textAlignment="center"
        android:inputType="number"
        android:maxLength="2"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/pagamento_CVC"
        app:layout_constraintStart_toEndOf="@id/pagamento_mes"
        android:layout_marginTop="8dp"
        android:autofillHints="Ano da valiadade do cartão" />

    <EditText
        android:id="@+id/pagamento_CVC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cvc"
        android:textAlignment="center"
        android:inputType="number"
        android:maxLength="3"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao"
        app:layout_constraintStart_toEndOf="@id/pagamento_ano"
        app:layout_constraintEnd_toEndOf="@id/pagamento_numero_cartao"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:autofillHints="Código de segurança do cartão" />

    <EditText
        android:id="@+id/pagamento_nome_cartao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:digits="qwertyuiopasdfghjklçzxcvbnm QWERTYUIOPASDFGHJKLÇZXCVBNM"
        android:hint="@string/nome_no_cart_o_de_cr_dito"
        app:layout_constraintTop_toBottomOf="@id/pagamento_CVC"
        app:layout_constraintStart_toStartOf="@id/pagamento_numero_cartao"
        app:layout_constraintEnd_toEndOf="@id/pagamento_numero_cartao"
        android:autofillHints="nome cartão no credito"
        android:inputType="text" />

    <Button
        android:id="@+id/pagamento_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/finalizar_compra"
        android:textColor="@color/white"
        android:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintTop_toBottomOf="@id/pagamento_nome_cartao"/>



</androidx.constraintlayout.widget.ConstraintLayout>