<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/resumo_imagem_sp"
        android:layout_width="0dp"
        android:layout_height="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@drawable/sao_paulo_sp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/foto_de_s_o_paulo"
        />

    <TextView
        android:id="@+id/resumo_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/s_o_paulo"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/resumo_imagem_sp"
        app:layout_constraintStart_toStartOf="@id/resumo_imagem_sp"
        />
    <TextView
        android:id="@+id/resumo_dias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="@string/_2_dias"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/resumo_local"
        app:layout_constraintStart_toStartOf="@id/resumo_local"
             />

    <TextView
        android:id="@+id/resumo_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/resumo_dias"
        app:layout_constraintStart_toStartOf="@id/resumo_dias"
        app:layout_constraintEnd_toStartOf="@id/resumo_valor_preco"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        tools:text="@tools:sample/date/ddmmyy"
        />
    <TextView
        android:id="@+id/resumo_valor_preco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        tools:text="R$ 399,00"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/resumo_data"
        app:layout_constraintBottom_toBottomOf="@id/resumo_data"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_bias="0.0"
        />

    <TextView
        android:id="@+id/resumo_txt_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pre_o_final"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/resumo_valor_preco"
        app:layout_constraintEnd_toEndOf="@id/resumo_valor_preco"
        />

    <Button
        android:id="@+id/resumo_botao_pagamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/realizar_o_pagemento"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>